# custom-graphic-editor

./: README.md  main.py  pyproject.toml  requirements.txt
classes/: brightness_correction.py  convert_color_space.py  data_image.py  dithering.py  gamma_correction.py  line_drawing.py  png_parser.py  resampling.py
scripts/: dithering_algorithms.py  exceptions.py  read.py  utilities.py  write.py
